--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,36 @@
+/* Importing Google Fonts */
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
 
+/* Resetting default styles and setting box-sizing */
 * {
   margin: 0;
   border: 0;
   box-sizing: border-box;
 }
 
+/* CSS variables for font families */
 :root {
   --font-roboto: "Roboto Slab", serif;
   --font-raleway: "Raleway", sans-serif;
 }
 
+/* Body styling */
 body {
   font-family: var(--font-roboto);
-  background-color: #212426;
+  background-color: #212426; /* Dark background */
 }
 
+/* App container styling */
 .app {
   padding: 4rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+/* Main heading */
 h1 {
   font-size: 3rem;
   letter-spacing: 0.9px;
@@ -40,21 +45,20 @@ h1 {
   width: fit-content;
 }
 
+/* Search box container */
 .search {
   width: 71%;
   margin: 4rem 0 2rem;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   padding: 1.5rem 1.75rem;
   border-radius: 3rem;
   background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
   box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
 }
 
+/* Search input */
 .search input {
   flex: 1;
   border: none;
@@ -62,19 +66,21 @@ h1 {
   font-family: var(--font-raleway);
   font-weight: 500;
   padding-right: 1rem;
-
   outline: none;
   color: #a1a1a1;
   background: #1f2123;
 }
 
+/* Search icon */
 .search img {
   width: 35px;
   height: 35px;
   cursor: pointer;
 }
 
-/* .search button {
+/* Optional search button style (currently commented out) */
+/*
+.search button {
   padding: 20px 40px;
   border-radius: 0.5rem;
   margin-left: 15px;
@@ -85,14 +91,14 @@ h1 {
   font-size: 1.25rem;
   cursor: pointer;
   background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
   box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-} */
+}
+*/
 
+/* Empty state styling */
 .empty {
   width: 100%;
   margin-top: 3rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -104,30 +110,30 @@ h1 {
   font-family: var(--font-raleway);
 }
 
+/* Movie cards container */
 .container {
   width: 100%;
   margin-top: 3rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
 
+/* Individual movie card */
 .movie {
   width: 310px;
   height: 460px;
   margin: 1.5rem;
-
   position: relative;
   border-radius: 12px;
   overflow: hidden;
   border: none;
-
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
 }
 
+/* Year text, hidden by default, appears on hover */
 .movie div:nth-of-type(1) {
   position: absolute;
   padding: 16px;
@@ -137,26 +143,29 @@ h1 {
   color: #f9d3b4;
 }
 
+/* Hover effect on movie card */
 .movie:hover {
   box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
   transform: scale(1.05, 1.05);
 }
 
+/* Poster image container */
 .movie div:nth-of-type(2) {
   width: 100%;
   height: 100%;
 }
 
+/* Poster image itself */
 .movie div:nth-of-type(2) img {
   height: 100%;
   width: 100%;
 }
 
+/* Movie type and title */
 .movie div:nth-of-type(3) {
   z-index: 2;
   background-color: #343739;
   padding: 16px 24px 24px 24px;
-
   position: absolute;
   bottom: 0;
   right: 0;
@@ -178,6 +187,7 @@ h1 {
   color: #f9d3b4;
 }
 
+/* Hover effects: fade poster, reveal year, make background transparent */
 .movie:hover div:nth-of-type(2) {
   height: 100%;
   opacity: 0.3;
@@ -191,6 +201,7 @@ h1 {
   opacity: 1;
 }
 
+/* Responsive styles for screens ≤600px */
 @media screen and (max-width: 600px) {
   .app {
     padding: 4rem 2rem;
@@ -211,6 +222,7 @@ h1 {
   }
 }
 
+/* Responsive styles for screens ≤400px */
 @media screen and (max-width: 400px) {
   .app {
     padding: 4rem 1rem;
@@ -225,7 +237,7 @@ h1 {
   }
 
   .movie {
-    width: "100%";
+    width: "100%"; /* NOTE: should be 100% without quotes */
     margin: 1rem;
   }
 }
